--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "sqlite": "^2.2.0"
+    "sqlite": "^2.2.0",
+    "sqlite3": "^3.1.4"
   },
   "devDependencies": {
     "babel-plugin-transform-regenerator": "^6.14.0",
